# glyphos

./: .dockerignore  .dockerignore.afc  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.afc  EXTRACTION_COMPLETE.py  HYDRA.md  HYPERFLOW.md  MCP_ORACLE_HYDRA.md  PROTOCOL_REGISTRY.md  README.md  README_LAYER_CRAWLER.md  README_ONEFILE_LAUNCHER.md  ROADMAP_2060.md  SYSTEM_MAP.md  Spacefile  TASK_LEDGER.md  _test_ffmpeg.py  add_endpoints.py  afc_protocol.py  afc_server.py  anti_glyph  anti_glyph.cpp  app.py  asc_client.py  audioglyph.py  autonomous_loop.py  autonomous_loop_state-2.json  autonomous_pipeline.py  autopilot.py  autopilot_state.json  blurhash64.py  booking_ledger.py  browser_automation.py  browser_telemetry.py  chatgpt_automate.py  clientpulse.py  compute_capital.py  (+126 more)
.next/: trace
.proofwallet_data/: receipts.jsonl
RUNS/: ..voice_mac_remote_demo.png-RCGf
SPEC/: AFC_PROTOCOL_WHITEPAPER.md  AUDIOGLYPH64_TECHNICAL_NOTE.md  BLURHASH64_TECHNICAL_NOTE.md  JORKI_PRODUCT_SPEC.md  README.md  acceptance_tests.md  api_contract.md  architecture.md  product_spec.md
agent_bridge/: __init__.py  bridge_server.py  chatgpt_poller.py  com.agentbridge.poller.plist  com.agentbridge.server.plist  demo.py  etl_pipeline.py  git_post_commit  (+4 more)
ytl-mcp-lab/: .env.example  COMPLIANCE.md  HYPERFLOW.md  Makefile  POLICY.md  README.md  pyproject.toml
ytl-mcp-lab/data/: ytl_lab.db
ytl-mcp-lab/experiments/active/: 01d32b3420617f4d.json  0a1e87a31b67fcf0.json  1d35e0d6bfa7f41b.json  c32457b9cd6a1bf5.json
ytl-mcp-lab/receipts/: ledger.jsonl
ytl-mcp-lab/scripts/: init_db.py
ytl-mcp-lab/server/: mcp_server.py
ytl-mcp-lab/tests/: test_lab.py
(+5098 files in other folders)
