[project]
name = "ytl-mcp-lab"
version = "0.1.0"
description = "YouTube Automation Research Lab — local-first MCP-controlled research server"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "mcp>=0.1.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.0.0",
    "sqlite-utils>=3.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"
